tests/build/widget_new/limited_attrs_in_when_blocks.stderr
error: only `cfg` and lint attributes are allowed in when blocks
 --> $DIR/limited_attrs_in_when_blocks.rs:6:9
  |
6 |         #[some_attr]
  |         ^

error: only `cfg` and lint attributes are allowed in when blocks
 --> $DIR/limited_attrs_in_when_blocks.rs:9:9
  |
9 |         #[inline]
  |         ^

error: only `cfg` and lint attributes are allowed in when blocks
  --> $DIR/limited_attrs_in_when_blocks.rs:12:9
   |
12 |         /// docs
   |         ^^^^^^^^
